--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,3 +13,11 @@ th {
 	padding: 5px;
 	border-bottom: 1px solid #aaa;
 }
+
+.jumbotron { 
+    background-color: #f4511e; /* Orange */
+    color: #ffffff;
+}
+
+
+
